--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1122,6 +1122,18 @@ h6,
 #msg-box8-1m p {
   color: #fff;
 }
+#features1-hf .striped .mbr-cards-col:nth-child(2n+1) {
+  background-color: #91bdae;
+}
+#features1-hf .mbr-cards-col:nth-child(odd) .card-title {
+  color: #174034;
+}
+#features1-hf .mbr-cards-col:nth-child(odd) .card-subtitle {
+  color: #174034;
+}
+#features1-hf .mbr-cards-col:nth-child(odd) .card-text {
+  color: #174034;
+}
 #features1-ga .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #91bdae;
 }
